1. Метод .of [#330899]